force-app/main/default/objects/Case_Integration_Outbound__e/Case_Integration_Outbound__e.object-meta.xml
<CustomObject>
    <label>Case Integration Outbound</label>
    <pluralLabel>Case Integration Outbound</pluralLabel>
</CustomObject>