force-app/main/default/objects/Case_Integration_Outbound__e/fields/Case_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Integration_ID__c</fullName>
    <label>Case Integration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>