force-app/main/default/objects/Case_Integration_Outbound__e/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <label>Integration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>