force-app/main/default/objects/Case_Integration_Outbound__e/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>ServiceName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>